--- a/Buffer/CMakeLists.txt
+++ b/Buffer/CMakeLists.txt
@@ -1,10 +1,4 @@
-add_library( Buffer 
-	BlockBuffer.cpp 
-	BlockBuffer.h
-	StaticBuffer.cpp 
-	StaticBuffer.h
-)
+add_library(Buffer BlockBuffer.cpp BlockBuffer.h StaticBuffer.cpp
+                   StaticBuffer.h)
 
-target_include_directories(Buffer
-	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-)
+target_include_directories(Buffer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
