--- a/Disk_Class/CMakeLists.txt
+++ b/Disk_Class/CMakeLists.txt
@@ -1,8 +1,3 @@
-add_library( Disk_Class
-	Disk.cpp 
-	Disk.h
-)
+add_library(Disk_Class Disk.cpp Disk.h)
 
-target_include_directories(Disk_Class
-	PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
-)
+target_include_directories(Disk_Class PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
