--- a/Algebra/CMakeLists.txt
+++ b/Algebra/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(Algebra Algebra.cpp Algebra.h)
+add_library(Algebra SHARED Algebra.cpp Algebra.h)
 
 target_include_directories(Algebra PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
