--- a/Schema/CMakeLists.txt
+++ b/Schema/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(Schema Schema.cpp Schema.h)
+add_library(Schema SHARED Schema.cpp Schema.h)
 
 target_include_directories(Schema PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
