--- a/BPlusTree/CMakeLists.txt
+++ b/BPlusTree/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(BPlusTree BPlusTree.cpp BPlusTree.h)
+add_library(BPlusTree SHARED BPlusTree.cpp BPlusTree.h)
 
 target_include_directories(BPlusTree PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
