--- a/BlockAccess/CMakeLists.txt
+++ b/BlockAccess/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_library(BlockAccess BlockAccess.cpp BlockAccess.h)
+add_library(BlockAccess SHARED BlockAccess.cpp BlockAccess.h)
 
 target_include_directories(BlockAccess PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
