--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 set(cmake_c_link_executable ${cmake_cxx_link_executable})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+set(CMAKE_CXX_STANDARD 23)
+
 project(nitcbase LANGUAGES CXX)
 
 # Subdirectories of each component
@@ -14,6 +16,7 @@ add_subdirectory(Disk_Class)
 add_subdirectory(Frontend)
 add_subdirectory(FrontendInterface)
 add_subdirectory(Schema)
+add_subdirectory(define)
 
 # Executable
 add_executable(nitcbase main.cpp)
@@ -26,6 +29,7 @@ target_link_libraries(
   StaticBuffer
   BlockBuffer 
   Cache
+  Defines
   Disk_Class
   Frontend
   FrontendInterface
